--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-clean-ts-extends": "^0.1.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.1.1",
     "gulp-typescript": "^2.7.6",
+    "gulp-uglify": "^1.2.0",
     "merge2": "^0.3.5"
   }
 }
